--- a/lib/views/home_page.erb
+++ b/lib/views/home_page.erb
@@ -2,5 +2,5 @@
 <form action="/name" method="POST">
   <label for="name">Name:</label><br>
   <input type="text" name="name"><br><br>
-  <input type="submit" value="submit">
+  <input type="submit" value="Submit">
 </form>
