--- a/lib/views/game.erb
+++ b/lib/views/game.erb
@@ -1,1 +1,9 @@
-<h1>Welcome, <%= name %></h1>
+<h1>Welcome, <%= @name %></h1>
+
+<% if @game %>
+    <p> <%= @name %>'s move :  <%= @game.player_move.capitalize %></p>
+<% else %>
+    <form action="/move" method="post">
+        <input type="submit" name="rock" value="Rock">
+    </form>
+<% end %>
